--- a/GameOfNim/GameOfNim/SetupWindow.xaml
+++ b/GameOfNim/GameOfNim/SetupWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GameOfNim"
         mc:Ignorable="d"
-        Title="SetupWindow" Height="325" Width="300" WindowStartupLocation="CenterScreen"
+        Title="G A M E   O F   N I M" Height="325" Width="300" WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
