Finished up the game window for the most part. Turn order half works and picking a loser also half works. Once we get the turn counter working the lose con and turn order should work. Did some edits to the player class to make it ask for the users name. Blank input is allowed but I'm not sure how to change that.

--- a/GameOfNim/GameOfNim/GameWindow.xaml
+++ b/GameOfNim/GameOfNim/GameWindow.xaml
@@ -31,7 +31,8 @@
                    HorizontalAlignment="Center"
                    FontFamily="Courier New"
                    FontSize="16"
-                   FontWeight="Bold"/>
+                   FontWeight="Bold"
+                   x:Name="TurnLabel"/>
             <Grid x:Name="GameBoard" Height="400" Width="350">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="6*"/>
